<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMiniTwitterBlue"
    tools:context=".ui.auth.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_logo_minitwitter_white" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_user_name"
        android:text=""
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorMiniTwitterDarkBlue"
        android:textColorHint="@color/colorMiniTwitterDarkBlue"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextMail"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewGoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/start_session_string"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorMiniTwitterDarkBlue"
        android:textColorHint="@color/colorMiniTwitterDarkBlue"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignup"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/buttonSignup"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorMiniTwitterDarkBlue"
        android:textColorHint="@color/colorMiniTwitterDarkBlue"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextUser"
        app:layout_constraintStart_toStartOf="@+id/editTextUser"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorMiniTwitterDarkBlue"
        android:textColorHint="@color/colorMiniTwitterDarkBlue"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        app:layout_constraintEnd_toEndOf="@+id/editTextMail"
        app:layout_constraintStart_toStartOf="@+id/editTextMail"
        app:layout_constraintTop_toBottomOf="@+id/editTextMail" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/button_signup"
        android:textColor="@color/colorMiniTwitterBlue"
        app:layout_constraintBottom_toTopOf="@+id/textViewGoLogin"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>